--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,10 @@
-$def with (schedules, form, error_text)
+$def with (form)
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset=utf-8 />
     <title>
-      GD-OECI :: Semestre 2-2015 - Inscripci&oacute;n de laboratorios.
+      ICARO :: Semestre 1-2017 - Inscripci&oacute;n de laboratorios.
     </title>
     <link rel=stylesheet type=text/css href=static/styles.css>
     <link href=img/favicon.ico rel=icon type=image/x-icon />
@@ -18,8 +18,7 @@ $def with (schedules, form, error_text)
               <td colspan=2>
                 <br>
                 <div class=text_style id=banner>
-                  <h1> Organizaci&oacute;n y Estructura del Computador 1 </h1>
-                  <h2> Inscripci&oacute;n de laboratorios :: Semestre 2-2015 </h2>
+                  <h2> Inscripci&oacute;n de laboratorios :: Semestre 1-2017 </h2>
                 </div>
               </td>
             </tr>
@@ -29,47 +28,10 @@ $def with (schedules, form, error_text)
               </td>
             </tr>
             <tr>
-              <td>
-                <div class=text_style>
-                  <h3>
-                    Datos para la inscripci&oacute;n.
-                  </h3>
-                </div>                
-              </td>
-              <td>
-                <div class=text_style>
-                  <h3>Horarios disponibles</h3>
-                <div class=text_style>
-              </td>
-            </tr>
-            <tr>
               <td style=vertical-align:top>
-                $if error_text is not None:
-                  <div class=text_style>
-                    <p class=warning> $:error_text </p>
-                  </div>
                 <form action="" method=post>
                 $:form.render()
                 </form>
-              </td>
-              <td>
-                <div style=font-variant:small-caps>
-                  <ul>
-                  $for sched in schedules:
-                    $if sched.sched_id < 8:
-                      <li>
-                        <b>$sched.description</b>
-                        <br/>
-                        Capacidad: <i>15</i>
-                        <br/>
-                        Disponibles: 
-                        <i>$sched.capacity</i>
-                        <br/>
-                        Sala: 
-                        $sched.name
-                      </li>
-                  </ul>
-                </div>
               </td>
             </tr>
           </table>
